force-app/main/default/objects/CB_Investment__c/CB_Investment__c.object-meta.xml
<CustomObject>
    <description>Crunchbase Investment Data</description>
    <label>Investment</label>
    <nameField>
        <displayFormat>Investment-{0000}</displayFormat>
        <label>Investment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>