force-app/main/default/objects/CB_Investment__c/fields/Funding_Round__c.field-meta.xml
<CustomField>
    <fullName>Funding_Round__c</fullName>
    <label>Funding Round</label>
    <referenceTo>CB_Funding_Round__c</referenceTo>
    <relationshipLabel>Investors</relationshipLabel>
    <relationshipName>Investor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>