force-app/main/default/objects/CB_Investment__c/fields/Investor__c.field-meta.xml
<CustomField>
    <fullName>Investor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Investor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investment</relationshipName>
    <type>Lookup</type>
</CustomField>