force-app/main/default/objects/CB_Investment__c/fields/Investor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Investor_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Investor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investment</relationshipLabel>
    <relationshipName>Investment</relationshipName>
    <type>Lookup</type>
</CustomField>