force-app/main/default/objects/CB_Investment__c/fields/Investor_Person__c.field-meta.xml
<CustomField>
    <fullName>Investor_Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Investor Person</label>
    <referenceTo>CB_Person__c</referenceTo>
    <relationshipLabel>Investment</relationshipLabel>
    <relationshipName>Investment</relationshipName>
    <type>Lookup</type>
</CustomField>