force-app/main/default/objects/CB_Investment__c/fields/Lead_Investor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Investor</label>
    <type>Checkbox</type>
</CustomField>