force-app/main/default/objects/CB_Investment__c/validationRules/has_Investor.validationRule-meta.xml
<ValidationRule>
    <fullName>has_Investor</fullName>
    <active>true</active>
    <errorConditionFormula>Investor_Organization__c  = null    &amp;&amp;   Investor_Person__c = null</errorConditionFormula>
    <errorMessage>An investment needs either an Organization or a Person as investor.</errorMessage>
</ValidationRule>